<resources>
    <string name="app_name">HidroGestion</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="recientes">Recientes</string>
    <string name="motivo">Motivo</string>
    <string name="titulo" />
    <string name="descripcion" />
    <string name="hora" />
    <string name="logoInicio" />
    <string name="profile_photo" />
    <string name="log_out">LOG OUT</string>
    <string name="GUARDAR" />
    <string name="guardar">GUARDAR</string>
    <string name="iniciar_sesion">iniciar sesión</string>
    <string name="add_cut" />
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="julia_serrano">Julia Serrano</string>
    <string name="actividad_reciente">Actividad reciente:</string>
    <string name="todo">TODO</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
</resources>