<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue_theme"
    tools:context=".ui.activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/logoInicio"
                android:layout_width="284dp"
                android:layout_height="49dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo" />

            <!-- Campos comunes de login -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="8dp"
                android:hint="@string/usuario"
                android:autofillHints=""
                android:importantForAutofill="no"
                android:drawableTint="@color/gray_theme"
                android:textSize="15sp"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:drawableTint="@color/gray_theme"
                android:autofillHints=""
                android:importantForAutofill="no"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:textSize="15sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/iniciar_sesion"
                app:cornerRadius="20dp" />

            <!-- Redirección a SignupActivity -->
            <Button
                android:id="@+id/signupRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/no_tienes_cuenta_reg_strate"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
